local/jenkins/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: cicd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: microwave1005/custom-jenkins:latest
          ports:
            - containerPort: 8080
            - containerPort: 50000
          securityContext:
            privileged: true
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home

        - name: docker
          image: docker:dind
          securityContext:
            privileged: true
          args:
            - "--host=tcp://0.0.0.0:2375"
            - "--host=unix:///var/run/docker.sock"
          volumeMounts:
            - name: dind-storage
              mountPath: /var/lib/docker

      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-pvc
        - name: dind-storage
          emptyDir: {}
