local/jenkins/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: cicd
spec:
  type: NodePort
  selector:
    app: jenkins
  ports:
    - name: http
      port: 6060          
      targetPort: 8080    
      nodePort: 30660
