local/jenkins/jenkins-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: jenkins-gateway
  namespace: cicd
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "jenkins.localdev.me"  # Bạn có thể sửa theo nhu cầu
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jenkins-vs
  namespace: cicd
spec:
  hosts:
  - "jenkins.localdev.me"
  gateways:
  - jenkins-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: jenkins.cicd.svc.cluster.local
        port:
          number: 8080
